--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="profile">
             <img class="Me" src="ME.png" alt="My pic">
             <h2>Hello.</h2>
-            <p>I am a Web Developer with experties in HTML, CSS and JavaScript</p>
+            <p class="para">I am a Web Developer with experties in HTML, CSS and JavaScript</p>
         </div>
         <hr>
         <div class="skills">
@@ -45,13 +45,13 @@
         <div class="Contact-Me">
             <h2>Get In Touch</h2>
             <h3>I am at your Service</h3>
-            <p>If you think that I can be useful to you in any work then you can reach me at</p>
+            <p class="para">If you think that I can be useful to you in any work then you can reach me at</p>
             <a class="btn" href="mailto:burhan.ahmed60090@gmail.com">Contact Me</a>
         </div>
     </div>
     <div class="bottom-container">
-        <a class="Footer-link" href="https://www.linkedin.com/in/muhammad-burhan-ahmed-86ab7b10a/">linkedIn</a>
-        <p>© 2023 Burhan Ahmed</p>
+        <a class="Footer-link" href="https://www.linkedin.com/in/muhammad-burhan-ahmed-86ab7b10a/">LinkedIn</a>
+        <p class="copyright">© 2023 Burhan Ahmed</p>
     </div>
 </body>
 
